P charge started